--- a/emBODY/arch-host/demo/embObjLib.conf
+++ b/emBODY/arch-host/demo/embObjLib.conf
@@ -5,6 +5,7 @@
 set(BODY_COMMON_FOLDER  ${BASE}any-arch/body/embenv/envcom/)
 set(NVS_COMMON_FOLDER  	${BASE}any-arch/sys/embobj/config/nvs/common/)
 set(NVS_REMOTE_FOLDER  	${BASE}any-arch/sys/embobj/config/nvs/remote/)
+set(NVS_LOCAL_FOLDER  	${BASE}any-arch/sys/embobj/config/nvs/local/)
 set(CORE_FOLDER  	${BASE}any-arch/sys/embobj/core/src/)
 set(CORE_API	  	${BASE}any-arch/sys/embobj/core/api/)
 set(CORE_VEE_FOLDER  	${BASE}any-arch/sys/embobj/core-vee/src/)
@@ -16,6 +17,7 @@ set(PORTING_FOLDER 	${BASE}porting/)
 set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${NVS_COMMON_FOLDER} 
 						${NVS_REMOTE_FOLDER}
+						${NVS_LOCAL_FOLDER}
 						${CORE_API}
 						${CORE_FOLDER}
 						${CORE_VEE_FOLDER}../api/
@@ -30,7 +32,7 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${EXTRA_FOLDER}
 						${YARP_INCLUDE_DIRS} 
 						${iCubDev_INCLUDE_DIRS}
-						${BASE}any-arch/sys/embobj/config/nvs/wip/)
+						${BASE}arch-host/demo/headers/)
 
 include_directories (${embObj_includes})
 #message(INFO " lib.conf - embObj_includes: ${embObj_includes}")
