updated hostTransceiver demo with new mc endpoint
svn path=/trunk/iCub/firmware/; revision=17062

--- a/emBODY/arch-host/demo/hostTransceiver/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/hostTransceiver/src/CMakeLists.txt
@@ -14,13 +14,13 @@ PROJECT(${PROJECTNAME})
 set(BASE $ENV{ICUB_ROOT}/firmware/emBODY/)
 set(EXTRA_FOLDER  	${CMAKE_CURRENT_SOURCE_DIR}/)
 
-include(../../embObjLib.conf)
+include($ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/embObjLib.conf)
 find_package(YARP)
 include_directories(${YARP_INCLUDE_DIRS})
 
 # Debug messages
 # message(INFO " BASE=${BASE}")
-# message(INFO " lib_cmake - embObj_includes: ${embObj_includes}")
+ message(INFO " hosttrans - embObj_includes: ${embObj_includes}")
   	
 # get all files needed, collected in different lists for better organization and handling
 
@@ -45,7 +45,25 @@ set(NVS_REMOTE_SOURCE		${NVS_REMOTE_FOLDER}/eOcfg_EPs_rem_board.c
 set(NVS_REMOTE_HEADER		${NVS_REMOTE_FOLDER}/eOcfg_EPs_rem_board.h
 							${NVS_REMOTE_FOLDER}/eOcfg_nvsEP_base_usr_rem_anydev.h
 							${NVS_REMOTE_FOLDER}/eOcfg_nvsEP_mngmnt_usr_rem_board.h
-							${NVS_REMOTE_FOLDER}/eOcfg_nvsEP_jopint_usr_rem_board.h)
+							${NVS_REMOTE_FOLDER}/eOcfg_nvsEP_joint_usr_rem_board.h)
+
+
+set(NVS_MC_EP_SOURCE 		${NVS_MC_EP}eOcfg_nvsEP_mc_any_con_bodypart.c
+							${NVS_MC_EP}eOcfg_nvsEP_mc_any_con_jxxdefault.c
+							${NVS_MC_EP}eOcfg_nvsEP_mc_any_con_mxxdefault.c
+							${NVS_MC_EP}eOcfg_nvsEP_mc_leftleg_con.c
+							${NVS_MC_EP}eOcfg_nvsEP_mc_leftleg_usr_rem_ebx.c)
+							
+
+set(NVS_MC_EP_HEADER 		${NVS_MC_EP}/eOcfg_nvsEP_mc_any_con_bodypart.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_any_con_bodypart_hid.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_any_con_jxx.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_any_con_jxxdefault.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_any_con_mxx.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_any_con_mxxdefault.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_leftleg_con.h
+							${NVS_MC_EP}/eOcfg_nvsEP_mc_leftleg_usr_rem_ebx.h)
+
 
 # EmbObj-src
 set(CORE_FOLDER_SOURCE  			${CORE_FOLDER}/EOarray.c
@@ -146,21 +164,25 @@ set(EXTRA_SOURCE 		${EXTRA_FOLDER}/hostTransceiver.cpp
 						${EXTRA_FOLDER}/main-transceiver.cpp)
 
 set(embobj_source 		${BODY_COMMON_SOURCE} 
-						${CORE_FOLDER_SOURCE} 
-						${CORE_VEE_SOURCE} 
-						${NVS_COMMON_SOURCE} 
-						${NVS_REMOTE_SOURCE} 
-						${PROT_SOURCE} 
-						${IPNET_SOURCE} 
-						${HAL_FAKE_SOURCE} 
-						${EXTRA_SOURCE}
-						${PROT_FOLDER})
+				${CORE_FOLDER_SOURCE} 
+				${CORE_VEE_SOURCE}  
+				${PROT_SOURCE} 
+				${IPNET_SOURCE} 
+				${HAL_FAKE_SOURCE} 
+				${EXTRA_SOURCE}
+				${PROT_FOLDER}
+				${NVS_COMMON_SOURCE} 
+				${NVS_REMOTE_SOURCE}
+				${NVS_MC_EP_SOURCE})
 
 
 set(embobj_header 		${BODY_COMMON_SOURCE} 
 						${CORE_API_HEADER} 
 						${PROT_HEADER} 
-						${IPNET_HEADER})
+						${IPNET_HEADER}
+						${NVS_COMMON_HEADER} 
+						${NVS_REMOTE_HEADER}
+						${NVS_MC_EP_HEADER})
 
 SOURCE_GROUP("EmbObj Source Files" FILES ${folder_source})
 SOURCE_GROUP("EmbObj Header Files" FILES ${folder_header})
