--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -3,18 +3,18 @@
 # source file that needs to use the protocol.
 
 set(BODY_COMMON_FOLDER  ${BASE}any-arch/body/embenv/envcom/)
-set(CORE_FOLDER  	${BASE}any-arch/sys/embobj/core/src/)
-set(CORE_API	  	${BASE}any-arch/sys/embobj/core/api/)
-set(CORE_VEE_FOLDER  	${BASE}any-arch/sys/embobj/core-vee/src/)
-set(IPNET_FOLDER  	${BASE}any-arch/sys/embobj/ipnet/src/)
-set(PROT_FOLDER  	${BASE}any-arch/sys/embobj/prot/src/)
-set(HAL_API_FOLDER	${BASE}any-arch/sys/abslayer/api/)
+set(CORE_FOLDER  	${BASE}any-arch/sys1/embobj/core/src/)
+set(CORE_API	  	${BASE}any-arch/sys1/embobj/core/api/)
+set(CORE_VEE_FOLDER  	${BASE}any-arch/sys1/embobj/core-vee/src/)
+set(IPNET_FOLDER  	${BASE}any-arch/sys1/embobj/ipnet/src/)
+set(PROT_FOLDER  	${BASE}any-arch/sys1/embobj/prot/src/)
+set(HAL_API_FOLDER	${BASE}any-arch/sys1/abslayer/api/)
 set(PORTING_FOLDER 	${BASE}porting/)
 # schede varie
 set(NVS_COMMON_FOLDER  	${BASE}arch-host/demo/nvs/common/)
 set(NVS_REMOTE_FOLDER  	${BASE}arch-host/demo/nvs/remote/)
 set(NVS_LOCAL_FOLDER  	${BASE}arch-host/demo/nvs/local/)
-set(NVS_MC_EP     		${BASE}arch-host/demo/nvs/endpoints/mc/)
+set(NVS_MC_EP     		${BASE}arch-host/demo/nvs/endpoints/mc2/)
 
 set(embObj_includes 	${BODY_COMMON_FOLDER}
 			${NVS_COMMON_FOLDER} 
@@ -35,7 +35,8 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 			${YARP_INCLUDE_DIRS} 
 			${iCubDev_INCLUDE_DIRS}
 			${NVS_MC_EP}
-			#${BASE}arch-armcmx/body/embobj/embobj/embobj-icub/
+			${BASE}arch-host/demo/nvs/endpoints/
+		# 	${BASE}arch-armcmx/body/embobj/embobj/embobj-icub/
 			${BASE}arch-host/demo/nvs/
 			$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/)   
 
