update hostTransceiver2 demo
svn path=/trunk/iCub/firmware/; revision=17833

--- a/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories(${YARP_INCLUDE_DIRS})
 
 # Debug messages
 # message(INFO " BASE=${BASE}")
- message(INFO " hosttrans - ${NVS_SENSORS_CBK_FOLDER} - embObj_includes: ${embObj_includes}")
+ #message(INFO " hosttrans - ${NVS_SENSORS_CBK_FOLDER} - embObj_includes: ${embObj_includes}")
   	
 # get all files needed, collected in different lists for better organization and handling
 
@@ -57,7 +57,8 @@ set(NVS_MC_SOURCE 			${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc.c
 #							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_any_usr_jxxmacro.c
 #							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_any_usr_mxxmacro.c
 #							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_any_usr_nvmacro.c
-
+							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_any_con_cxx.c
+							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_any_con_cxxdefault.c
 #							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_leg_con.c
 #							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_leg_usr.c
 #							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_leg_usr_pippo.c
@@ -77,8 +78,11 @@ set(NVS_MC_SOURCE 			${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc.c
 							${NVS_MC_SRC_FOLDER}eOcfg_nvsEP_mc_upperleg_usr.c 
 							)						
 
-set(NVS_MNGMNT_SOURCE		${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mngmnt_con.c
-							${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mngmnt_usr.c	)
+set(NVS_MNGMNT_SOURCE		${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mn.c	
+							${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mn_appl_con.c
+							${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mn_appl_usr.c
+							${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mn_comm_con.c
+							${NVS_MNGMNT_SRC_FOLDER}eOcfg_nvsEP_mn_comm_usr.c )
 
 set(NVS_SENSORS_SOURCE		${NVS_SENSORS_SRC_FOLDER}eOcfg_nvsEP_as.c
 							${NVS_SENSORS_SRC_FOLDER}eOcfg_nvsEP_as_any_con_body.c  
@@ -103,10 +107,11 @@ set(NVS_SKIN_SOURCE			${NVS_SKIN_SRC_FOLDER}eOcfg_nvsEP_sk.c
 
 set(NVS_CBK_SOURCE			${NVS_MC_CBK_FOLDER}eOcfg_nvsEP_mc_lowerleg_usrcbk_pippo.c
 #							${NVS_MC_CBK_FOLDER}eOcfg_nvsEP_mc_upperleg_usrcbk_pippo.c
-							${NVS_MC_CBK_FOLDER}eOcfg_nvsEP_mc_usrcbk_pippo.c
-#							${NVS_MNGMNT_CBK_FOLDER}eOcfg_nvsEP_mngmnt_usr_ebx.c
+#							${NVS_MC_CBK_FOLDER}eOcfg_nvsEP_mc_usrcbk_pippo.c
+							${NVS_MNGMNT_CBK_FOLDER}eOcfg_nvsEP_mngmnt_usr_ebx.c
 #							${NVS_SENSORS_CBK_FOLDER}eOcfg_nvsEP_as_wholebody_usrcbk_pippo.c 
 #							${NVS_SENSORS_CBK_FOLDER}eOcfg_nvsEP_as_usrcbk_pippo.c 
+							${NVS_SKIN_CBK_FOLDER}eOcfg_nvsEP_sk_usrcbk_ebx.c
 							)
 
 
