--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -69,6 +69,7 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${EXTRA_FOLDER}
 						${YARP_INCLUDE_DIRS} 
 						${iCubDev_INCLUDE_DIRS}		#??
+						$ENV{ICUB_ROOT}/main/src/core/iCubInterface-branch/
 						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  )   
 
 include_directories (${embObj_includes})
