--- a/emBODY/arch-host/demo/boardTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/boardTransceiver2/src/embObjLib.conf
@@ -67,6 +67,7 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${EXTRA_FOLDER}
 						${YARP_INCLUDE_DIRS} 
 						${iCubDev_INCLUDE_DIRS}		#??
+						${NVS_SKIN_CBK_FOLDER}
 						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  )   
 
 include_directories (${embObj_includes})
