--- a/emBODY/arch-armcmx/apps/others/EOMemsAppl/proj/STM32_TP.ini
+++ b/emBODY/arch-armcmx/apps/others/EOMemsAppl/proj/STM32_TP.ini
@@ -22,15 +22,28 @@ FUNC void DebugSetup (void) {
 //             <1=> Synchronous: TRACEDATA Size 1
 //             <2=> Synchronous: TRACEDATA Size 2
 //             <3=> Synchronous: TRACEDATA Size 4
-//   <o1.8>    DBG_IWDG_STOP <i> Independant Watchdog Stopped when Core is halted
-//   <o1.9>    DBG_WWDG_STOP <i> Window Watchdog Stopped when Core is halted
-//   <o1.10>   DBG_TIM1_STOP <i> Timer 1 Stopped when Core is halted
-//   <o1.11>   DBG_TIM2_STOP <i> Timer 2 Stopped when Core is halted
-//   <o1.12>   DBG_TIM3_STOP <i> Timer 3 Stopped when Core is halted
-//   <o1.13>   DBG_TIM4_STOP <i> Timer 4 Stopped when Core is halted
-//   <o1.14>   DBG_CAN_STOP  <i> CAN Stopped when Core is halted
+//   <o1.8>    DBG_IWDG_STOP                <i> Independant Watchdog Stopped when Core is halted
+//   <o1.9>    DBG_WWDG_STOP                <i> Window Watchdog Stopped when Core is halted
+//   <o1.10>   DBG_TIM1_STOP                <i> Timer 1 Stopped when Core is halted
+//   <o1.11>   DBG_TIM2_STOP                <i> Timer 2 Stopped when Core is halted
+//   <o1.12>   DBG_TIM3_STOP                <i> Timer 3 Stopped when Core is halted
+//   <o1.13>   DBG_TIM4_STOP                <i> Timer 4 Stopped when Core is halted
+//   <o1.14>   DBG_CAN1_STOP                <i> CAN1 Stopped when Core is halted
+//   <o1.15>   DBG_I2C1_SMBUS_TIMEOUT       <i> SMBUS timeout mode stopped when Core is halted
+//   <o1.16>   DBG_I2C2_SMBUS_TIMEOUT       <i> SMBUS timeout mode stopped when Core is halted 
+//   <o1.17>   DBG_TIM8_STOP                <i> Timer 8 Stopped when Core is halted    
+//   <o1.18>   DBG_TIM5_STOP                <i> Timer 5 Stopped when Core is halted
+//   <o1.19>   DBG_TIM6_STOP                <i> Timer 6 Stopped when Core is halted
+//   <o1.20>   DBG_TIM7_STOP                <i> Timer 7 Stopped when Core is halted
+//   <o1.21>   DBG_CAN2_STOP                <i> CAN2 Stopped when Core is halted
+//   <o1.25>   DBG_TIM12_STOP               <i> Timer 12 Stopped when Core is halted
+//   <o1.26>   DBG_TIM13_STOP               <i> Timer 13 Stopped when Core is halted
+//   <o1.27>   DBG_TIM14_STOP               <i> Timer 14 Stopped when Core is halted
+//   <o1.28>   DBG_TIM9_STOP                <i> Timer 9 Stopped when Core is halted
+//   <o1.29>   DBG_TIM10_STOP               <i> Timer 10 Stopped when Core is halted
+//   <o1.30>   DBG_TIM11_STOP               <i> Timer 11 Stopped when Core is halted
 // </h>
-  _WDWORD(0xE0042004, 0x000000E7);  // DBGMCU_CR
+  _WDWORD(0xE0042004, 0x7E3FFFE7);  // DBGMCU_CR
 }
 
 DebugSetup();                       // Debugger Setup
