--- a/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
@@ -222,7 +222,8 @@ set(IPNET_HEADER		${IPNET_FOLDER}/EOpacket_hid.h)
 set(HAL_FAKE_SOURCE		${PORTING_FOLDER}/hal_fake.c)
 
 set(EXTRA_SOURCE 		${EXTRA_FOLDER}/main-transceiver.cpp
-						${TRANSCEIVER_FOLDER}/hostTransceiver.cpp )
+						${TRANSCEIVER_FOLDER}/hostTransceiver.cpp 
+						${TRANSCEIVER_FOLDER}/debugFunctions.cpp)
 
 set(embobj_source 		${BODY_COMMON_SOURCE} 
 						${CORE_FOLDER_SOURCE} 
