--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -72,6 +72,7 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${NVS_SKIN_API_FOLDER}
 						${NVS_SKIN_SRC_FOLDER}
 						${NVS_SKIN_CBK_FOLDER}
+						${NVS_SENSORS_CBK_FOLDER}
 						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  )   
 
 include_directories (${embObj_includes})
