changed socket type for ethManager
svn path=/trunk/iCub/firmware/; revision=19202

--- a/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
@@ -223,7 +223,8 @@ set(HAL_FAKE_SOURCE		${PORTING_FOLDER}/hal_fake.c)
 
 set(EXTRA_SOURCE 		${EXTRA_FOLDER}/main-transceiver.cpp
 						${TRANSCEIVER_FOLDER}/hostTransceiver.cpp 
-						${TRANSCEIVER_FOLDER}/debugFunctions.cpp)
+						${TRANSCEIVER_FOLDER}/tools/debugFunctions.cpp
+						${TRANSCEIVER_FOLDER}/tools/udp.cpp)
 
 set(embobj_source 		${BODY_COMMON_SOURCE} 
 						${CORE_FOLDER_SOURCE} 
