--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -73,7 +73,8 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${NVS_SKIN_SRC_FOLDER}
 						${NVS_SKIN_CBK_FOLDER}
 						${NVS_SENSORS_CBK_FOLDER}
-						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  )   
+						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  
+						${TRANSCEIVER_FOLDER}/tools/)   
 
 include_directories (${embObj_includes})
-message(INFO " lib.conf - embObj_includes: ${embObj_includes}")
+#message(INFO " lib.conf - embObj_includes: ${embObj_includes}")
