--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -74,7 +74,8 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${NVS_SKIN_CBK_FOLDER}
 						${NVS_SENSORS_CBK_FOLDER}
 						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  
-						${TRANSCEIVER_FOLDER}/tools/)   
+						${TRANSCEIVER_FOLDER}/tools/
+						${ACE_INCLUDE_DIR})   
 
 include_directories (${embObj_includes})
 #message(INFO " lib.conf - embObj_includes: ${embObj_includes}")
