iCuibInterface-branch: - Modified the way skin data are took from EO Callbacks and digested inside iCubInterface - Reverted changes to most of core files - Cleaned clase iCubFeature (can be a candidate to be the prototype for device list interface) - Better debugging function to check for missing packets
svn path=/trunk/iCub/firmware/; revision=19653

--- a/emBODY/arch-host/demo/boardTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/boardTransceiver2/src/embObjLib.conf
@@ -68,7 +68,8 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${YARP_INCLUDE_DIRS} 
 						${iCubDev_INCLUDE_DIRS}		#??
 						${NVS_SKIN_CBK_FOLDER}
-						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  )   
+						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/ 
+						${ACE_INCLUDE_DIR} )   
 
 include_directories (${embObj_includes})
 #message(INFO " lib.conf - embObj_includes: ${embObj_includes}")
