--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -53,7 +53,6 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${NVS_SENSORS_API_FOLDER}
 						${NVS_SKIN_SRC_FOLDER}
 						${NVS_SKIN_API_FOLDER}
-#			${NVS_USR_FOLDER}
 						${CORE_API}
 						${CORE_FOLDER}
 						${CORE_VEE_FOLDER}../api/
@@ -69,8 +68,7 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${YARP_INCLUDE_DIRS} 
 						${iCubDev_INCLUDE_DIRS}		#??
 						${ICUB_INTERFACE_CORE_FOLDER}
-						${NVS_SKIN_API_FOLDER}
-						${NVS_SKIN_SRC_FOLDER}
+                        ${NVS_MC_CBK_FOLDER}
 						${NVS_SKIN_CBK_FOLDER}
 						${NVS_SENSORS_CBK_FOLDER}
 						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  
