firmware embobj: removed info message in cmakefile
svn path=/trunk/iCub/firmware/; revision=20259

--- a/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
@@ -20,10 +20,9 @@ set(ICUB_INTERFACE_CORE_FOLDER	$ENV{ICUB_ROOT}/main/src/core/iCubInterface-branc
 
 #add_definitions( -D_AC_="STRINGA" )
 
-set(MY_CALLBACK template_buttons.cpp)
+set(AC_buttons.cpp template_buttons.cpp)
 set(CMAKE_MODULE_PATH  ${CMAKE_SOURCE_DIR}/../../)
 
-message(INFO, "${CMAKE_SOURCE_DIR}")
 find_package(ACE)
 
 include(embObjLib.conf)
