--- a/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/CMakeLists.txt
@@ -20,7 +20,7 @@ set(ICUB_INTERFACE_CORE_FOLDER	$ENV{ICUB_ROOT}/main/src/core/iCubInterface-branc
 
 #add_definitions( -D_AC_="STRINGA" )
 
-set(AC_buttons.cpp template_buttons.cpp)
+set(MY_CALLBACK template_buttons.cpp)
 set(CMAKE_MODULE_PATH  ${CMAKE_SOURCE_DIR}/../../)
 
 find_package(ACE)
