--- a/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
+++ b/emBODY/arch-host/demo/hostTransceiver2/src/embObjLib.conf
@@ -68,8 +68,8 @@ set(embObj_includes 	${BODY_COMMON_FOLDER}
 						${YARP_INCLUDE_DIRS} 
 						${iCubDev_INCLUDE_DIRS}		#??
 						${ICUB_INTERFACE_CORE_FOLDER}
-                        ${NVS_MC_CBK_FOLDER}
-						${NVS_SKIN_CBK_FOLDER}
+#                       ${NVS_MC_CBK_FOLDER}
+#						${NVS_SKIN_CBK_FOLDER}
 						${NVS_SENSORS_CBK_FOLDER}
 						$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/  
 						${TRANSCEIVER_FOLDER}/tools/
