Update to virtual EMS demo
svn path=/trunk/iCub/firmware/; revision=21796

--- a/emBODY/arch-host/demo/boardTransceiver2/src/CMakeLists.txt
+++ b/emBODY/arch-host/demo/boardTransceiver2/src/CMakeLists.txt
@@ -15,7 +15,8 @@ set(BASE 				$ENV{ICUB_ROOT}/firmware/emBODY/)
 set(EXTRA_FOLDER  		${CMAKE_CURRENT_SOURCE_DIR}/)
 set(TRANSCEIVER_FOLDER	$ENV{ICUB_ROOT}/main/src/libraries/icubmod/embObjLib/ )
 
-set(CMAKE_MODULE_PATH ../../)
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../../)
+
 find_package(ACE)
 
 include(embObjLib.conf)
