--- a/mtb3/SKIN/nbproject/Makefile-genesis.properties
+++ b/mtb3/SKIN/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Aug 09 15:18:56 CEST 2013
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=8be872af6f78624fc50da52fe00d8246
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.10\\bin
+#Mon Oct 07 12:42:38 CEST 2013
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLAB C30\\bin
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d94e033fce233e60ccb9abf3a212a9b7
-default.languagetoolchain.version=1.10
+default.languagetoolchain.version=3_30b
+default.com-microchip-mplab-nbide-toolchainC30-C30LanguageToolchain.md5=316945bba57a8fe2e876636a59ae0815
 host.platform=windows
 conf.ids=default
