BUILD NUMBER 2.10.8 . Fix an error in the accelerometers and gyro reading
svn path=/trunk/iCub/firmware/; revision=27326

--- a/mtb3/SKIN/nbproject/Makefile-genesis.properties
+++ b/mtb3/SKIN/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Mon Oct 07 12:42:38 CEST 2013
+#Tue Nov 26 14:55:44 CET 2013
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLAB C30\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d94e033fce233e60ccb9abf3a212a9b7
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=0d2b1469ad71adb787c711a416386331
 default.languagetoolchain.version=3_30b
-default.com-microchip-mplab-nbide-toolchainC30-C30LanguageToolchain.md5=316945bba57a8fe2e876636a59ae0815
+default.com-microchip-mplab-nbide-toolchainC30-C30LanguageToolchain.md5=a008dc290e7e8dbad8ef0cd64d8807f8
 host.platform=windows
 conf.ids=default
