--- a/emBODY/eBcode/arch-arm/board/ems001/appl/v01/proj/STM32_TP.ini
+++ b/emBODY/eBcode/arch-arm/board/ems001/appl/v01/proj/STM32_TP.ini
@@ -43,7 +43,7 @@ FUNC void DebugSetup (void) {
 //   <o1.29>   DBG_TIM10_STOP               <i> Timer 10 Stopped when Core is halted
 //   <o1.30>   DBG_TIM11_STOP               <i> Timer 11 Stopped when Core is halted
 // </h>
-  _WDWORD(0xE0042004, 0x7E3FFFE7);  // DBGMCU_CR
+  _WDWORD(0xE0042004, 0x7E3FFF27);  // DBGMCU_CR
 }
 
 DebugSetup();                       // Debugger Setup
