--- a/emBODY/eBcode/arch-dspic/board/2foc/appl/2foc-icubProto/proj/2FOC.X/nbproject/Makefile-genesis.properties
+++ b/emBODY/eBcode/arch-dspic/board/2foc/appl/2foc-icubProto/proj/2FOC.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Thu Oct 10 17:23:44 CEST 2013
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=26a7901dbe87d7e11439cd0f1e8b118b
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.11\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=0d2b1469ad71adb787c711a416386331
-default.languagetoolchain.version=1.11
+#Mon Dec 16 11:31:27 CET 2013
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=7db8c3a567a37656e059f650e4507af9
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v1.20\\bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=0b040d5e5949b59f004c7912367437ce
+default.languagetoolchain.version=1.20
 host.platform=windows
 conf.ids=default
